<resources>
    <string name="app_name">Smart-Refrigerator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="firebase_notification_channel_id">Notification</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="location">Location</string>
    <string name="id">ID</string>
    <string name="kind">Kind</string>
    <string name="memo">Memo</string>
    <string name="count">Count</string>
    <string name="shelf_life">Shelf Life</string>
    <string name="purchasing_time">Purchasing Time</string>
    <string name="storing_time">Storing Time</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="search">Search</string>
    <string name="synchronization">Synchronization</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh</string>
    <string name="image_append">Image Append</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="update_time">Update Time</string>

</resources>