<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_items_cardview"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="5dp"
        android:foreground="?selectableItemBackground"
        android:clickable="true" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardViewCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/home_items_Image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@color/purple_200"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_items_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:padding="3dp"
                android:text="@string/location"
                app:layout_constraintLeft_toRightOf="@+id/home_items_Image"
                app:layout_constraintStart_toEndOf="@+id/home_items_Image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/home_items_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:padding="3dp"
                android:text="@string/kind"
                app:layout_constraintLeft_toRightOf="@+id/home_items_Image"
                app:layout_constraintStart_toEndOf="@+id/home_items_Image"
                app:layout_constraintTop_toBottomOf="@+id/home_items_location" />

            <TextView
                android:id="@+id/home_items_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:padding="3dp"
                android:text="@string/count"
                app:layout_constraintLeft_toRightOf="@+id/home_items_Image"
                app:layout_constraintStart_toEndOf="@+id/home_items_Image"
                app:layout_constraintTop_toBottomOf="@+id/home_items_category" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
