<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="dashBoardVM"
            type="wikibook.learnandroid.smart_refrigerator.viewmodels.DashboardViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.DashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dashboard_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.95"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_dashboard"
        app:titleTextColor="@color/purple_500"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_toolbar"
        android:theme="@style/ToolbarTheme"
        app:tabMode="fixed">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:icon="@drawable/ic_baseline_add_box_24"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:icon="@drawable/ic_baseline_edit_24"
            />

    </com.google.android.material.tabs.TabLayout>


<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintWidth_percent="0.9"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHeight_percent="0.4"-->
<!--        android:id="@+id/dashboard_fragment_CL1"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        >-->

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintHeight_percent="0.9"-->
<!--            app:layout_constraintWidth_percent="0.85"-->
<!--            android:id="@+id/dashboard_fragment_IV1"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            android:background="@color/grey_d5"-->
<!--            >-->
<!--        </ImageView>-->


<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintWidth_percent="0.9"-->
<!--        app:layout_constraintHeight_percent="0.6"-->
<!--        app:layout_constraintTop_toBottomOf="@id/dashboard_fragment_CL1"-->
<!--        android:id="@+id/dashboard_fragment_CL2"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--            >-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.45"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.05"-->
<!--            app:startIconDrawable="@drawable/ic_dashboard_black_24dp"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/kind"-->
<!--                android:id="@+id/dashboard_edittext_kind"-->
<!--                android:layout_width="match_parent"-->
<!--                android:focusable="true"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.45"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.05"-->
<!--            app:startIconDrawable="@drawable/ic_dashboard_black_24dp"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/location"-->
<!--                android:id="@+id/dashboard_edittext_location"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.45"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:startIconDrawable="@drawable/ic_dashboard_black_24dp"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.3"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/count"-->
<!--                android:id="@+id/dashboard_edittext_count"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.45"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.3"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/shelf_life"-->
<!--                android:id="@+id/dashboard_edittext_shelflife"-->
<!--                android:inputType="datetime"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.45"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:startIconDrawable="@drawable/ic_dashboard_black_24dp"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.55"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/count"-->
<!--                android:id="@+id/dashboard_edittext_asd"-->
<!--                android:inputType="numberDecimal"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="0.45"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.55"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/purchasing_time"-->
<!--                android:id="@+id/dashboard_edittext_purchasingtime"-->
<!--                android:inputType="datetime"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintWidth_percent="1"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"-->
<!--            app:startIconTint="@color/purple_500"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.93"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:hint="@string/memo"-->
<!--                android:id="@+id/dashboard_edittext_memo"-->
<!--                android:inputType="textMultiLine"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="100dp"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->








    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>